fix small stuffs
