# backend-api/src/schema/orderitem.schemas.js
@@ -4,8 +4,8 @@ const OrderitemSchema = z.object({
     id: z.coerce.number().int().nonnegative(),
     OrderId: z.coerce.number().int().nonnegative(),
     ProductId: z.coerce.number().int().nonnegative(),
-    Quantity: z.number().int().nonnegative(),
-    Price: z.number().nonnegative(),
+    Quantity: z.coerce.number().int().nonnegative(),
+    Price: z.coerce.number().nonnegative(),
 });
 
 /**
